Crash in TileCache::revalidateTiles https://bugs.webkit.org/show_bug.cgi?id=79510 <rdar://problem/10928035>

Reviewed by Sam Weinig.

Handle the tile cache layer's PlatformCALayer going away before the
CALayer itself has been deallocated.

* platform/graphics/ca/mac/TileCache.mm:
(WebCore::TileCache::revalidateTiles):

git-svn-id: svn://svn.chromium.org/blink/trunk@108825 bbb929c8-8fbe-4397-9dbb-9b2b20218538